Fixed gap between total-price and buy now in cart page

--- a/src/main/webapp/CSS/cart.css
+++ b/src/main/webapp/CSS/cart.css
@@ -64,10 +64,11 @@
     border-bottom: 2px solid #41644A;
     font-size: 18px;
     justify-content: center;
+    align-items: center;
 }
 
 .itemName {
-    width: 29%;
+    width: 26%;
     display: flex;
 }
 
@@ -84,12 +85,6 @@
     display: flex;
     text-align: center;
     justify-content: center;
-}
-
-.itemAction {
-    width: 32%;
-    display: inline-flex;
-    text-align: center;
 }
 
 .info_product{
@@ -111,8 +106,9 @@
     display: flex;
     flex-direction: column;
 }
+
 .removeItem{
-    width: 20%;
+    width: 10%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -161,13 +157,13 @@
 .quantity {
     display: inline-flex;
     justify-content: space-evenly;
-    width: 80%;
+    width: 25%;
     align-items: center;
 }
 
 .deliveryInformation {
     padding: 5% 0 0 1rem;
-    height: 50%;
+    height: max-content;
 }
 
 .totalPrice {
@@ -175,7 +171,7 @@
     align-items: center;
     flex-direction: column;
     padding: 0.5rem 0;
-    height: 25%;
+    height: max-content;
     gap: 0.4rem;
 }
 
@@ -193,7 +189,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 20%;
+    height: max-content;
     cursor: pointer;
 }
 
@@ -204,6 +200,12 @@
     border: 1px solid #41644A;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.table-cart-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 @media screen and (max-width: 931px) {
@@ -237,12 +239,8 @@
         width: 13%;
     }
 
-    .itemName {
-        width: 28%;
-    }
-
-    .itemAction {
-        width: 35%;
+    .quantity{
+        width: 27%;
     }
 
     .table-head {
@@ -275,10 +273,6 @@
 
     .address, .deliveryInformation, .table-head, .itemCate {
         display: none;
-    }
-
-    .itemAction {
-        width: 41%;
     }
 
     .content {
@@ -314,6 +308,11 @@
     .table-cart-right {
         margin: 2% 10% 5%;
     }
+
+    .quantity {
+        width: 31%;
+    }
+
 }
 
 @media screen and (max-width: 520px) {
@@ -328,10 +327,6 @@
 
     .itemName {
         width: 35%;
-    }
-
-    .itemAction {
-        width: 41%;
     }
 
     .btn-incre, .btn-decree {
@@ -350,6 +345,7 @@
         width: 20px;
         height: 20px;
     }
+
 }
 
 @media screen and (max-width: 390px) {
@@ -368,10 +364,6 @@
         font-size: 1rem;
     }
 
-    .itemAction {
-        width: 43%;
-    }
-
     .form-control {
         width: 2.5rem;
         height: 1.35rem;
@@ -382,4 +374,21 @@
         width: 18px;
         height: 18px;
     }
+
+    .quantity {
+        width: 33%;
+    }
+
+    .itemName {
+        width: 31%;
+    }
+
+    .itemBuyNow {
+        width: 13%;
+    }
+
+    .removeItem {
+        width: 11%;
+    }
+
 }
